# jupyter-work

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml
.ipynb_checkpoints/: AGENTS-checkpoint.md  plotly_quick_start-checkpoint.ipynb  pyproject-checkpoint.toml
lims2_sdk_quickstart/: lims2-sdk-README.md  plotly_quick_start.ipynb  plotly_quick_start.ipynb.html  thumbnail.ipynb
lims2_sdk_quickstart/plotly_json_quickstart/: PPINetwork.py  example.json  plotly_boxplot_data.json  plotly_viewer.html
lims2_sdk_quickstart/plotly_json_quickstart/.ipynb_checkpoints/: README-checkpoint.md
plotly_json_quickstart/: plotly_viewer_v2.html
plotly_quickstart/: Plotly_Quick_Start.md  README.md  plotly_python.ipynb  plotly_r.ipynb  plotly_viewer_v2.html
