[project]
name = "jupyter-work"
version = "0.1.0"
description = "Plotly/Cytoscape 图表生成、预览与上传工作区"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab>=4.4.7",
    "kaleido>=1.3.0",
    "lims2-sdk>=0.6.2",
    "nbstripout>=0.8.1",
    "numpy>=2.3.3",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "plotly>=6.2.0",
]

[project.urls]
Repository = "https://github.com/huangzhibo/jupyter-work"
